--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,6 @@
     50% { transform: rotateY(90deg); opacity: 0.5; }
     100% { transform: rotateY(0deg); }
 }
+html {
+    scroll-behavior: smooth;
+  }
