--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,17 +4,27 @@
 .flip-animation {
     animation: flip 0.5s ease;
 }
+
 @keyframes flip {
-    0% { transform: rotateY(0deg); }
-    50% { transform: rotateY(90deg); opacity: 0.5; }
-    100% { transform: rotateY(0deg); }
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    50% {
+        transform: rotateY(90deg);
+        opacity: 0.5;
+    }
+
+    100% {
+        transform: rotateY(0deg);
+    }
 }
+
 html {
     scroll-behavior: smooth;
-  }
+}
 
 body {
     font-family: "Plus Jakarta Sans",
         sans-serif;
 }
-    
