--- a/src/index.css
+++ b/src/index.css
@@ -2,29 +2,36 @@
 @import "leaflet/dist/leaflet.css";
 
 .flip-animation {
-    animation: flip 0.5s ease;
+  animation: flip 0.5s ease;
 }
 
 @keyframes flip {
-    0% {
-        transform: rotateY(0deg);
-    }
+  0% {
+    transform: rotateY(0deg);
+  }
 
-    50% {
-        transform: rotateY(90deg);
-        opacity: 0.5;
-    }
+  50% {
+    transform: rotateY(90deg);
+    opacity: 0.5;
+  }
 
-    100% {
-        transform: rotateY(0deg);
-    }
+  100% {
+    transform: rotateY(0deg);
+  }
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Plus Jakarta Sans",
-        sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+input.css-2u11ia-MuiInputBase-input-MuiOutlinedInput-input {
+  padding: 8.5px 14px;
+}
+
+div.css-1xp5r68-MuiFormControl-root-MuiTextField-root {
+  min-width: 100%;
 }
