--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,11 @@ html {
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
 }
-
+/* 
 input.css-2u11ia-MuiInputBase-input-MuiOutlinedInput-input {
   padding: 8.5px 14px;
 }
 
 div.css-1xp5r68-MuiFormControl-root-MuiTextField-root {
   min-width: 100%;
-}
+} */
